# PyFlashLogger

./: .gitignore  README.md  pyproject.toml  release.sh  requirements.txt  setup.py
FlashLogger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flashlogger/: __init__.py  color_scheme.py  error.py  exceptions.py  extended_enum.py  flash_logger.py  log_channel_abc.py  log_channel_console.py  log_channel_file.py  log_levels.py  overrides.py
flashlogger/config/: active_color_scheme.json  active_display.json  active_label_scheme.json  color_scheme_bw.json  color_scheme_color.json  color_scheme_plain.json  custom_levels.json  display_light_bg_bw.json  log_levels_de.json  log_levels_en.json  strings_fr.json
flashlogger/config/colors/: active
flashlogger/config/colors/factory/: display_dark_bg_bw.json  display_dark_bg_color.json
flashlogger/config/factory_defaults/: default_color_scheme.json  default_custom_levels.json  display_light_bg_color.json  display_plain.json  strings_cs.json  strings_es.json  strings_ja.json  strings_zh.json
flashlogger/config/levels/: active
flashlogger/config/strings/: active
flashlogger/config/strings/factory/: strings_de.json  strings_en.json  strings_gu.json  strings_hi.json  strings_it.json  strings_pt.json  strings_ru.json  strings_tr.json  strings_uk.json
test/: test_color_scheme.py  test_error.py  test_flash_logger.py  test_log_channel_abc.py  test_log_channel_console.py  test_log_channel_file.py  test_log_levels.py  test_state_machine.py
tools/: README.md  color_configurator.py  state_machine.py  try_out_logger.py
